# joby-demo

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yaml
results/: log.txt
source/: AggregateStatistics.hpp  Arguments.hpp  ChargingStation.hpp  ChargingStationId.hpp  ChargingStations.hpp  File.hpp  FileWriter.hpp  Main.cpp  Program.hpp  ResultsFileWriter.hpp  SampleVehicleModels.hpp  Settings.hpp  Simulation.hpp  SimulationSettings.hpp  Statistics.hpp  String.hpp  TextFileWriter.hpp  Vehicle.hpp  VehicleId.hpp  VehicleModel.hpp  VehicleModelId.hpp  VehicleModels.hpp  VehicleStatus.hpp  Vehicles.hpp
test/: AggregateStatistics.cpp  ChargingStation.cpp  ChargingStations.cpp  ResultsFileWriter.cpp  Settings.cpp  Simple.cpp  Simulation.cpp  SimulationSettings.cpp  Statistics.cpp  String.cpp  Vehicle.cpp  VehicleModel.cpp  VehicleModels.cpp  Vehicles.cpp
